--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <title>QR Code Scanner &ndash; Demo</title>
     <link rel="stylesheet" href="style.css" />
     <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/webrtc-adapter/3.3.3/adapter.min.js"
     ></script>
@@ -58,6 +63,23 @@
             </li>
           </transition-group>
         </section>
+        <h2 id="start">Product Info</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Property</th>
+              <th>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr v-for="prop in properties">
+              <td>
+                <strong>{{ prop.mKey }}</strong>
+              </td>
+              <td>{{ prop.value }}</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
       <div class="preview-container">
         <video id="preview"></video>
