change file location

--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
                 QR Code Scanning For Both Desktop And Mobile
               </h1>
               <p>
-                The QR Stuff QR Code Scanner is the perfect tool to scan your QR
-                codes anytime and anywhere. Now you can easily and simply
-                Generate, Download and Scan your QR codes all in one place –
-                Prohairlabs.com.
+                The QR Code Scanner is the perfect tool to scan your QR codes
+                anytime and anywhere. Now you can easily and simply Generate and
+                Scan your QR codes all in one place – Prohairlabs.com.
               </p>
               <h1 class="callout-text">
                 How it works?
